Update CLI documentation and complete implementation
Co-authored-by: vjda <20127271+vjda@users.noreply.github.com>